--- a/style.css
+++ b/style.css
@@ -1339,7 +1339,7 @@ ul {
     height: 208px; }
   .services__text {
     line-height: 20px; }
-  .header__con {
+  .header__container {
     padding: 19px 16px 19px 24px; }
   .services__text {
     max-height: 155px; }
