--- a/style.css
+++ b/style.css
@@ -512,41 +512,46 @@ template {
 .swiper-centered > .swiper-wrapper > .swiper-slide {
   scroll-snap-align: center center; }
 
-.header__container {
-  padding: 19px 16px 19px 16px;
-  background-color: #FFFFFF;
+.header__items {
   display: flex;
   align-items: center;
+  justify-content: space-between; }
+
+.header__left {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 16px;
   position: relative; }
 
-.header__burger {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  position: relative;
-  transition: all .2s linear;
-  margin-right: 16px; }
+.header__left::before {
+  content: "";
+  width: 2px;
+  height: 32px;
+  position: absolute;
+  left: 60px;
+  bottom: 10px;
+  background-color: #EAEAEA; }
 
-.header__burger:hover {
-  box-shadow: 0 0 5px 0 #34495e;
-  border-radius: 50%; }
+.header__right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 42px; }
+
+.header__icons {
+  display: flex;
+  flex-direction: row;
+  gap: 16px; }
+
+.header__icons:nth-child(1) {
+  display: none; }
 
 .header__logo {
   width: 97px;
   height: 51px; }
 
-.header__option {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  position: relative;
-  transition: all .2s linear; }
-
-.header__option:first-child::before {
+.header__option:nth-child(1)::before {
   content: "";
   width: 2px;
   height: 32px;
@@ -555,52 +560,26 @@ template {
   bottom: 5px;
   background-color: #EAEAEA; }
 
-.header__buttons-options {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  right: 16px;
-  gap: 16px;
-  margin-left: 20px; }
-
 .header__option:hover {
   box-shadow: 0 0 5px 0 #34495e;
   border-radius: 50%; }
 
-.header__buttons-contacts {
-  display: flex;
-  align-items: center;
+.header__icons:nth-child(2) {
+  position: relative; }
+
+.header__icons:nth-child(2)::before {
+  content: "";
+  width: 2px;
+  height: 32px;
   position: absolute;
-  right: 150px;
-  visibility: hidden;
-  gap: 16px; }
-
-.header__tel {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  transition: all .2s linear; }
-
-.header__messenger {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  transition: all .2s linear; }
-
-.header__profile {
-  background-image: url(./static/profile.svg);
-  width: 40px;
-  height: 40px;
-  padding: 0;
-  margin-right: 16px; }
+  left: -20px;
+  bottom: 5px;
+  background-color: #EAEAEA; }
 
 .footer {
   padding-left: 16px;
-  flex: 0 0 auto; }
+  position: fixed;
+  bottom: 0; }
   .footer__info {
     display: flex;
     flex-direction: column;
@@ -615,123 +594,111 @@ template {
       opacity: .72;
       text-align: center; }
 
-.services__title {
-  padding-left: 16px;
-  position: relative; }
-
-.services__title::before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  width: 3px;
-  height: 42px;
-  background: #41f6d7;
-  border-radius: 2px; }
-
-.services__hidden {
-  display: none; }
-
-.services__option, .services__status {
-  display: flex;
-  align-items: center;
-  font-family: 'TT Lakes Condensed Medium';
-  font-size: 16px;
-  line-height: 24px;
-  text-align: right;
-  letter-spacing: -0.2px;
-  color: #1B1C21;
-  gap: 10px; }
-
-.services__option-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  position: relative;
-  transition: all .2s linear; }
-
-.services__status-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  position: relative;
-  transition: all .2s linear; }
-
-.services__buttons::-webkit-scrollbar {
-  width: 0; }
-
-.services__buttons {
-  padding-left: 16px;
-  display: flex;
-  overflow: scroll; }
-
-.services__buttons-options {
-  display: none;
-  align-items: center; }
-
-.services__buttons ul {
-  display: flex; }
-
-.services__btn {
-  background-color: transparent;
-  white-space: nowrap;
-  padding: 6px 14px 6px 14px;
-  border: 2px solid #F8F8F8;
-  font-size: 16px;
-  line-height: 24px;
-  font-family: 'TT Lakes Condensed Regular';
-  letter-spacing: -0.2px;
-  color: #1B1C21;
-  transition: all .3s ease;
-  text-decoration: none; }
-
-.services__btn:hover, .services__btn:focus, .services__btn:active {
-  background: #FFFFFF;
-  border: 2px solid #B8FFEC;
-  border-radius: 6px; }
-
-.services__btn-more {
-  border: none;
-  background-color: transparent;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: -0.2px;
-  color: #1B1C21;
-  padding-left: 25px;
-  padding-bottom: 16px;
-  position: relative; }
-
-.services__btn-more:before {
-  content: url(./static/icon.svg);
-  position: absolute;
-  left: 5px; }
-
-.services__block {
+.services {
   display: flex;
   flex-direction: column;
-  align-items: flex-start; }
-
-.services__info {
-  padding: 0px 16px 0px 16px; }
-
-.services__img {
-  width: 320px;
-  height: 176px; }
-
-.services__span {
-  display: none; }
-
-.services__text {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  max-height: 90px;
-  overflow: hidden;
-  margin-bottom: 16px;
-  transition: all .3s linear; }
+  gap: 32px;
+  padding-bottom: 32px;
+  padding-right: 30px; }
+  .services__title {
+    padding-left: 16px;
+    position: relative; }
+  .services__title::before {
+    content: "";
+    position: absolute;
+    left: 0px;
+    width: 3px;
+    height: 42px;
+    background: #41f6d7;
+    border-radius: 2px; }
+  .services__hidden {
+    display: none; }
+  .services__option, .services__status {
+    display: flex;
+    align-items: center;
+    font-family: 'TT Lakes Condensed Medium';
+    font-size: 16px;
+    line-height: 24px;
+    text-align: right;
+    letter-spacing: -0.2px;
+    color: #1B1C21;
+    gap: 10px; }
+  .services__option-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    position: relative;
+    transition: all .2s linear; }
+  .services__status-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    position: relative;
+    transition: all .2s linear; }
+  .services__buttons::-webkit-scrollbar {
+    width: 0; }
+  .services__buttons {
+    padding-left: 16px;
+    display: flex;
+    overflow: scroll; }
+  .services__buttons-options {
+    display: none;
+    align-items: center; }
+  .services__buttons ul {
+    display: flex; }
+  .services__btn {
+    background-color: transparent;
+    white-space: nowrap;
+    padding: 6px 14px 6px 14px;
+    border: 2px solid #F8F8F8;
+    font-size: 16px;
+    line-height: 24px;
+    font-family: 'TT Lakes Condensed Regular';
+    letter-spacing: -0.2px;
+    color: #1B1C21;
+    transition: all .3s ease;
+    text-decoration: none; }
+  .services__btn:hover, .services__btn:focus, .services__btn:active {
+    background: #FFFFFF;
+    border: 2px solid #B8FFEC;
+    border-radius: 6px; }
+  .services__btn-more {
+    border: none;
+    background-color: transparent;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.2px;
+    color: #1B1C21;
+    padding-left: 25px;
+    padding-bottom: 16px;
+    position: relative; }
+  .services__btn-more:before {
+    content: url(./static/icon.svg);
+    position: absolute;
+    left: 5px; }
+  .services__block {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; }
+  .services__info {
+    padding: 0px 16px 0px 16px; }
+  .services__img {
+    width: 320px;
+    height: 176px; }
+  .services__span {
+    display: none; }
+  .services__text {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    max-height: 90px;
+    overflow: hidden;
+    margin-bottom: 16px;
+    transition: all .3s linear; }
 
 .services__text.text__open {
   max-height: 215px; }
@@ -861,12 +828,14 @@ template {
     line-height: 24px;
     letter-spacing: -0.2px;
     position: relative;
-    transition: all .2s linear; }
+    transition: all .2s linear;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
   .menu__link:hover::before {
     content: "";
     position: absolute;
     left: -24px;
-    bottom: -10%;
     width: 4px;
     height: 32px;
     background: #41f6d7;
@@ -1170,7 +1139,8 @@ template {
 body {
   font-family: 'TT Lakes Condensed Regular';
   background-color: #F8F8F8;
-  margin: 0; }
+  margin: 0;
+  height: 100%; }
 
 h1 {
   font-family: 'TT Lakes Condensed Bold';
@@ -1208,21 +1178,44 @@ li {
   list-style: none; }
 
 ul {
-  padding: 0; }
+  padding: 0;
+  margin: 0; }
 
 .container {
   max-width: 320px;
   width: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  height: 100%; }
+  margin: 0 auto; }
 
-.background {
+.icon--background {
   background-color: #FF3E79;
   background-repeat: no-repeat;
   border-radius: 20px;
   background-position: center; }
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  transition: all .2s linear; }
+
+.icon:hover {
+  box-shadow: 0 0 5px 0 #34495e;
+  border-radius: 50%; }
+
+.sections__section {
+  display: flex;
+  flex-direction: column;
+  gap: 16px; }
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%; }
+
+.sections {
+  flex: 1 1 auto; }
 
 @media (min-width: 321px) {
   .services__img {
@@ -1237,6 +1230,8 @@ ul {
     display: none; } }
 
 @media (min-width: 768px) {
+  .header__left {
+    gap: 42px; }
   .sections {
     display: flex;
     flex-direction: column;
@@ -1332,14 +1327,14 @@ ul {
     flex-direction: row; }
   .services__info p:nth-of-type(2) {
     display: block; }
-  .header__buttons-contacts {
-    visibility: visible; }
+  .header__icons:nth-child(1) {
+    display: flex; }
   .services__img {
     width: 360px;
     height: 208px; }
   .services__text {
     line-height: 20px; }
-  .header__con {
+  .header__items {
     padding: 19px 16px 19px 24px; }
   .services__text {
     max-height: 155px; }
@@ -1351,8 +1346,6 @@ ul {
     padding-left: 0; }
   .services__img {
     padding-top: 0; }
-  .header__logo {
-    margin-left: 20px; }
   .header__burger::after {
     content: "";
     width: 2px;
@@ -1396,10 +1389,18 @@ ul {
     width: 97%; } }
 
 @media (min-width: 1440px) {
-  .header__con {
+  .header {
+    padding-left: 320px; }
+  .services {
+    padding-left: 320px; }
+  .sections {
+    padding-left: 320px; }
+  .footer {
+    padding-left: 320px; }
+  .header__items {
     display: none; }
-  .header__status {
-    margin-left: 160px; }
+  .menu__head .icon:nth-child(1) {
+    display: none; }
   .services__head {
     display: flex;
     align-items: center;
@@ -1444,10 +1445,7 @@ ul {
   .services__text.text__open {
     max-height: 230px; }
   .container {
-    padding-left: 320px;
-    padding-right: 30px;
-    max-width: 1470px;
-    box-sizing: border-box; }
+    max-width: 1440px; }
   .menu {
     transform: translateX(-320px);
     background: #FFFFFF;
